# EMBEDDEED-SCHOOL-WORK

./: README.md
PRACS/RADAR/: radar_display.py  radar_sensor.c
PRACS/RADAR/armgcc/: .ninja_deps  .ninja_log  CMakeLists.txt  CMakePresets.json  build.ninja  build.sh  cmake_install.cmake  compile_commands.json  flash.sh  mcux_include.json
PRACS/RADAR/armgcc/release/: radar_sensor.elf
PRACS/minireto_RADAR/: README.md
PRACS/prac_pwm/: Diagram.xml  README.md
RISCV/: .svls.toml  README.md  RISCV.sv  RISCV_tb.sv  SystemVerilog.md  riscv_sim  riscv_sim.vcd
RISCV/ALU/: Design.sv  Testbench.sv
RISCV/ALUControl/: Design.sv  Testbench.sv
RISCV/Adder/: Design.sv  Testbench.sv
RISCV/BranchComparator/: Design.sv  Testbench.sv
RISCV/ControlUnit/: Design.sv  Testbench.sv
RISCV/DataMemory/: Design.sv  Testbench.sv
RISCV/ImmediateGenerator/: Design.sv  Testbench.sv
RISCV/InstructionMemory/: Design.sv  Testbench.sv
RISCV/Mux/: Design.sv  Testbench.sv
RISCV/ProgramCounter/: Design.sv  Testbench.sv
RISCV/Regiter File/: Design.sv  Testbench.sv
